--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,5 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 6
-  },
+  "parser": "babel-eslint",
   "env": {
     "browser": true,
     "node": true
