--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Canvas API wrapper",
   "main": "index.js",
   "scripts": {
-    "test": "node test/test.js",
+    "test": "npm run build && node es5-generated/test/test.js",
     "test-coveralls": "npm run istanbul && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "test-beefy": "beefy test/beefy.js -v",
-    "test-beefy-live": "beefy test/beefy.js --cwd test -v --live",
+    "test-beefy": "beefy es5-generated/test/beefy.js -v",
+    "test-beefy-live": "beefy es5-generated/test/beefy.js --cwd test -v --live",
     "coverage": "rm -rf coverage && npm run istanbul && istanbul report html && serve coverage",
-    "istanbul": "istanbul cover test/test.js",
-    "lint": "eslint index.js test/*",
-    "format": "js-beautify -s=2 -r -f *.js test/*.js",
+    "istanbul": "npm run build && istanbul cover es5-generated/test/test.js",
+    "lint": "eslint src-es6/*",
+    "format": "js-beautify -s=2 -r -f src-es6/*.js src-es6/test/*.js",
     "pre-commit": "npm run format && npm run lint && npm run test",
+    "build": "rm -rf es5-generated && mkdir es5-generated && babel src-es6 --out-dir es5-generated",
     "build-dist": "rm -rf dist && mkdir dist && npm run build-dist-browserify && npm run build-dist-rollup",
-    "build-dist-browserify": "browserify --standalone Staffelei  index.js -o dist/staffelei-browserify.js",
+    "build-dist-browserify": "npm run build && browserify --standalone Staffelei  es5-generated/index.js -o dist/staffelei-browserify.js",
     "build-dist-rollup": "rollup -c"
   },
   "repository": {
@@ -38,7 +39,11 @@
     "rollup-plugin-node-resolve": "^3.0.3",
     "serve": "^6.4.9",
     "tape": "^4.2.2",
-    "watchify": "^3.10.0"
+    "watchify": "^3.10.0",
+    "babel-cli": "^6.1.18",
+    "babel-core": "^6.1.20",
+    "babel-eslint": "^8.2.1",
+    "babel-preset-env": "^1.6.1"
   },
   "dependencies": {
     "canvas-utils": "^0.8.0",
