--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-preset-env": "^1.6.1"
   },
   "dependencies": {
-    "@tillarnold/oni": "0.1.1",
+    "oni.js": "0.1.2",
     "canvas-utils": "^0.8.0",
     "leinwand": "^0.6.0"
   }
