--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "format": "js-beautify -s=2 -r -f src-es6/*.js src-es6/test/*.js",
     "check": "npm run format && npm run lint && npm run test",
     "build": "rm -rf es5-generated && mkdir es5-generated && babel src-es6 --out-dir es5-generated",
-    "build-dist": "rm -rf dist && mkdir dist && npm run build-dist-browserify && npm run build-dist-rollup",
+    "build-dist": "rm -rf dist && mkdir dist && npm run build-dist-browserify && npm run build-dist-rollup && npm run build-dist-min",
     "build-dist-browserify": "npm run build && browserify --standalone Staffelei  es5-generated/index.js -o dist/staffelei-browserify.js",
-    "build-dist-rollup": "rollup -c"
+    "build-dist-rollup": "rollup -c",
+    "build-dist-min": "uglifyjs dist/staffelei-browserify.js > dist/staffelei-browserify-min.js && uglifyjs dist/staffelei-rollup.js > dist/staffelei-rollup-min.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,10 @@
   "author": "Till Arnold",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.1.18",
+    "babel-core": "^6.1.20",
+    "babel-eslint": "^8.2.1",
+    "babel-preset-env": "^1.6.1",
     "beefy": "^2.1.8",
     "browserify": "^16.1.0",
     "coveralls": "~3.0.0",
@@ -39,14 +44,11 @@
     "rollup-plugin-node-resolve": "^3.0.3",
     "serve": "^6.4.9",
     "tape": "^4.2.2",
-    "watchify": "^3.10.0",
-    "babel-cli": "^6.1.18",
-    "babel-core": "^6.1.20",
-    "babel-eslint": "^8.2.1",
-    "babel-preset-env": "^1.6.1"
+    "uglify-es": "^3.3.9",
+    "watchify": "^3.10.0"
   },
   "dependencies": {
-    "oni.js": "0.1.2",
+    "oni.js": "0.1.3",
     "canvas-utils": "^0.8.0",
     "leinwand": "^0.6.0"
   }
