--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.1.18",
-    "babel-core": "^6.1.20",
-    "babel-eslint": "^8.2.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-preset-env": "^1.6.1",
     "beefy": "^2.1.8",
-    "browserify": "^16.1.0",
-    "coveralls": "~3.0.0",
-    "eslint": "^4.17.0",
+    "browserify": "^16.2.0",
+    "coveralls": "^3.0.1",
+    "eslint": "^4.19.1",
     "istanbul": "^0.4.0",
     "js-beautify": "^1.6.3",
     "rollup": "^0.58.2",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.0.3",
-    "serve": "^6.4.9",
-    "tape": "^4.2.2",
-    "uglify-es": "^3.3.9",
-    "watchify": "^3.10.0"
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "serve": "^6.5.6",
+    "tape": "^4.9.0",
+    "uglify-es": "^3.3.10",
+    "watchify": "^3.11.0"
   },
   "dependencies": {
     "canvas-utils": "^0.8.0",
