--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "check": "npm run format && npm run lint && npm run test",
     "build": "rm -rf es5-generated && mkdir es5-generated && babel src-es6 --out-dir es5-generated",
     "build-dist": "rm -rf dist && mkdir dist && npm run build-dist-browserify && npm run build-dist-rollup && npm run build-dist-min",
-    "build-dist-browserify": "npm run build && browserify --standalone Staffelei  es5-generated/index.js -o dist/staffelei-browserify-v${npm_package_version}.js",
+    "build-dist-browserify": "npm run build && browserify --standalone Staffelei  es5-generated/browserify-wrapper.js -o dist/staffelei-browserify-v${npm_package_version}.js",
     "build-dist-rollup": "rollup -c",
     "build-dist-min": "npm run build-dist-rollup-min && npm run build-dist-browserify-min",
-    "build-dist-rollup-min": "uglifyjs dist/staffelei-rollup-v${npm_package_version}.js > dist/staffelei-rollup-v${npm_package_version}-min.js",
-    "build-dist-browserify-min": "uglifyjs dist/staffelei-browserify-v${npm_package_version}.js > dist/staffelei-browserify-v${npm_package_version}-min.js"
+    "build-dist-rollup-min": "uglifyjs --mangle --toplevel -- dist/staffelei-rollup-v${npm_package_version}.js > dist/staffelei-rollup-v${npm_package_version}-min.js",
+    "build-dist-browserify-min": "uglifyjs --mangle --toplevel -- dist/staffelei-browserify-v${npm_package_version}.js > dist/staffelei-browserify-v${npm_package_version}-min.js"
   },
   "repository": {
     "type": "git",
