--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test-coveralls": "npm run istanbul && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "test-beefy": "npm run build && beefy es5-generated/test/beefy.js -v",
     "test-beefy-live": "npm run build && beefy es5-generated/test/beefy.js --cwd test -v --live",
-    "coverage": "rm -rf coverage && npm run istanbul && istanbul report html && serve coverage",
-    "istanbul": "npm run build && istanbul cover es5-generated/test/test.js",
+    "coverage": "rm -rf coverage && npm run istanbul && nyc report --reporter=html && serve coverage",
+    "istanbul": "npm run build && nyc npm run test",
     "lint": "eslint src-es6/*",
     "format": "js-beautify -s=2 -r -f *.js src-es6/*.js src-es6/test/*.js",
     "check": "npm run format && npm run lint && npm run test",
@@ -32,23 +32,23 @@
   "author": "Till Arnold",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.1.18",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-preset-env": "^1.7.0",
     "beefy": "^2.1.8",
-    "browserify": "^16.2.3",
-    "coveralls": "^3.0.4",
-    "eslint": "^5.16.0",
-    "istanbul": "^0.4.0",
-    "js-beautify": "^1.10.0",
-    "rollup": "^1.14.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
-    "serve": "^11.0.1",
-    "tape": "^4.10.2",
+    "browserify": "^16.5.0",
+    "coveralls": "^3.0.9",
+    "eslint": "^6.8.0",
+    "js-beautify": "^1.10.3",
+    "rollup": "^1.29.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "serve": "^11.3.0",
+    "tape": "^4.13.0",
     "uglify-es": "^3.3.9",
-    "watchify": "^3.11.1"
+    "watchify": "^3.11.1",
+    "nyc": "^15.0.0"
   },
   "dependencies": {
     "canvas-utils": "^0.8.0",
